--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>JAJU</title>
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
@@ -37,9 +38,20 @@
                 <div class="spin">
                 <div class="section section01"><!--메인 섹션-->
                     <div class="section01_copy">
-                        <p data-split="내가">내가</p>
-                        <p data-split="주인인">주인인</p>
-                        <p data-split="삶">삶</p>
+                        <p>
+                            <span>L</span>
+                            <span>i</span>
+                            <span>f</span>
+                            <span>e</span>
+                            <span>&nbsp;</span>
+                            <span>o</span>
+                            <span>w</span>
+                            <span>n</span>
+                            <span>e</span>
+                            <span>r</span>
+<!--                        Life owner-->
+                        </p>
+                        <p>내가 주인인 삶</p>
                     </div>
                 </div>
                 <div class="section section02"><!--자주이야기-->
